# ray4

./: .gitignore  LICENSE.txt  README.md
craig/: convert  mtvtorast  r4tomtv.c
docs/: Four-Space_Visualization_of_4D_Objects.html  index.html
image4/: CMakeLists.txt  image4.cpp
ray4/: CHANGELOG.md  CMakeLists.txt  README  README.md  README.txt  copyright  image4.md  lmkfile  makefile  makefile-amiga  r4_globals.h  r4_hit.c  r4_image.h  r4_io.c  r4_main.c  r4_parse.c  r4_trace.c  r4_vec.c  r4tosgi.c  ray4-image-format.md  ray4.doc  ray4.h  ray4.md  v4cross.c  v4normalize.c  vector.h  write_ilbm.c
ray4-c/: .gitignore  CHANGELOG.md  CMakeLists.txt
ray4-c/craig/: display  r4tomtv.c  run
ray4-c/distribute/: readme.r4  readme.w4
ray4-c/inputs.r4/: HS1.R4  HS2.R4  HS5.R4  HS7.R4  HT1.R4  dots3.r4  dots4.r4  dots_axes.r4  format.r4  wdots.r4
ray4-c/src/: lmkfile  makefile  makefile-amiga  r4_globals.h  r4_hit.c  r4_image.h  r4_io.c  r4_main.c  r4_parse.c  r4_trace.c  r4_vec.c  r4_vector.h  r4tosgi.c  ray4.h  v4cross.c  v4normalize.c  vector.h
ray4/craig/: README.md  craig.sh  run  run2
ray4/distribute/: blurb.r4tomtv  ftp.sites  packages
ray4/inputs.r4/: HS3.R4  HS4.R4  HS6.R4  HT2.R4  HT3.R4  blank.r4  dots.r4  hyper.r4  scube.r4  sphere.r4  tcube.r4
ray4/ray4-c/: CHANGELOG.md  CMakeLists.txt  README.md  ray4-c.md
ray4/ray4-c/results/: ht1.icube  ht2.icube
ray4/ray4-c/src/: amiga.h  make.nt  r4_trace.c  r4_vec.c  r4toiff.c  v4cross.c  write_ilbm.c
ray4/results/: dots.2.icube  dots.icube  dots_axes.0.icube  ht3.icube
ray4/src/: amiga.h  image4.cpp  make.nt  r4_color.cpp  r4_color.h  r4_globals.h  r4_hit.c  r4_hit.cpp  r4_image.h  r4_io.c  r4_io.cpp  r4_main.c  r4_main.cpp  r4_parse.c  r4_parse.cpp  r4_point.cpp  r4_point.h  r4_ray.cpp  r4_ray.h  r4_test.cpp  r4_trace.c  r4_trace.cpp  r4_vec.c  r4_vec.cpp  r4_vector.cpp  r4_vector.h  r4toiff.c  r4tosgi.c  ray4.h  test.cpp  v4cross.c  v4normalize.c  vector.h  write_ilbm.c
thesis/: Four-Space Visualization of 4D Objects.html  README.md
thesis/PostScript/: README.md  abstract.ps  body.ps  lof.ps  title.ps  toc.ps
thesis/PostScript/figures/: README.md  README.txt  fig31,32.ps  fig33.ps  fig34.ps  fig41.ps  fig42.ps  fig43.ps  fig44.ps  fig45b.ps  fig45c.ps  fig45d.ps  fig46a.ps  fig46c.ps  fig51.ps  fig52.ps  fig53.ps  refract.ps
thesis/html/: Four-Space Visualization of 4D Objects.html  README.md  abstract.html  ack.html  appendix_a.html  chapter1.html  chapter2.html  chapter3.html  chapter4.html  chapter5.html  chapter6.html  index.html  lof.html  ref.html  thesis.css
thesis/troff/: 4dv.macros  README.md  README.txt  abstract  abstract.view  appendix  ascii.sh  body.view  chapter1  chapter2  chapter3  chapter4  chapter5  chapter6  lof.macros  lof.view  makefile  manifest  pageinfo  references  thesis.macros  title  title.view  toc.macros  toc.view
wire4/: README  README.md  README.txt  axes.w4  copyright  cube.w4  curve1.w4  dual.w4  makefile  psplot.c  psplot.md  psplot.txt  strcmpic.c  v3cross.c  v4cross.c  vector.h  w4_display.c  w4_geometry.c  w4_main.c  w4_parse.c  wire4.doc  wire4.h  wire4.md
wire4/inputs/: basis.w4  c.w4  cube3d.w4  curve2.w4  curve3.w4  frustum.w4
wire4/inputs/figs/: 4.10.w4  4.11.w4  4.12.w4  4.13.w4  4.14.w4  4.15.w4  4.5a.ps  4.5a.w4  4.5b.w4  4.5c.w4  4.5d.w4  4.6a.w4  4.6b.ps  4.6b.w4  4.6c.w4  4.6d.ps  4.6d.w4  4.7a.ps  4.7a.snap  4.7b.ps  4.7b.snap  4.8.w4  4.9.w4
